--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.0"
