--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
