added odoo config and relation between app and odoo

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,3 +22,12 @@ LOG_LEVEL=debug
 # Pagination
 DEFAULT_PAGE_SIZE=10
 MAX_PAGE_SIZE=100
+
+# Odoo Integration Configuration
+# IMPORTANT: Use a dedicated API user, NOT the admin account
+# Get your API key from: Odoo → Profile → Account Security → API Keys
+ODOO_URL=https://your-instance.odoo.com
+ODOO_DB=your-database-name
+ODOO_USERNAME=api_user@yourcompany.com
+ODOO_API_KEY=your_api_key_here_DO_NOT_COMMIT
+
